--- a/1612.09375-ams-ish/BasicCategoryTheory.tex
+++ b/1612.09375-ams-ish/BasicCategoryTheory.tex
@@ -15,6 +15,9 @@
 \input{macros}          % Macros
 \input{theoremenvts}    % Theorem environments
 
+% need this in palatino
+\newcommand{\mapsfrom}{\mathrel{\reflectbox{\ensuremath{\mapsto}}}}
+
 \usepackage[colorlinks=true
 ,urlcolor=blue
 ,anchorcolor=blue
@@ -48,7 +51,7 @@ bookmarksopenlevel=10
   
 \titleformat{\section}[block]
   {\fillast}
-  {{\thesection }}
+  {\large\sc{\thesection }}
   {1ex minus .1ex}
   {\large\scshape}
   
