--- a/1612.09375-ams-ish/intro.tex
+++ b/1612.09375-ams-ish/intro.tex
@@ -153,7 +153,7 @@ $\phi'\from \integers \to A$.  Now $\phi' \of \phi \from A \to A$ is a
 homomorphism, but so too is the identity map $1_A\from A \to A$; hence,
 since $A$ is initial, $\phi' \of \phi = 1_A$.  (This follows from the
 uniqueness part of initiality, taking `$R$' to be $A$.)  Similarly, $\phi
-\of \phi' = 1_\integers$.  So $\phi$ and $\phi'$ are mutually inverse, and
+\of \phi' = 1_{\integers}$.  So $\phi$ and $\phi'$ are mutually inverse, and
 therefore define an isomorphism between $A$ and $\integers$.
 \end{pf}
 
