--- a/1612.09375-ams-ish/macros.tex
+++ b/1612.09375-ams-ish/macros.tex
@@ -17,7 +17,6 @@
 \usepackage{graphicx}
 \usepackage{color}
 \usepackage{multicol}
-\usepackage{txfonts}
 
 \usepackage{url}
 \urlstyle{same}
@@ -75,11 +74,11 @@
 
 
 \newcommand{\cat}[1]{\mathscr{#1}}      % Arbitrary category
-\newcommand{\scat}[1]{\mathbf{#1}}      % Arbitrary small category
-\newcommand{\fcat}[1]{\mathbf{#1}}      % Typeface for fixed categories
+\newcommand{\scat}[1]{{\mathbf {#1}}}     % Arbitrary small category
+\newcommand{\fcat}[1]{{\mathbf {#1}}}    % Typeface for fixed categories
 
 \newcommand{\ovln}[1]{\overline{#1}}
-\newcommand{\lwr}[1]{\mathbf{#1}}       % \lwr{n} denotes n-element set
+\newcommand{\lwr}[1]{{\mathbf{#1}}}       % \lwr{n} denotes n-element set
 \newcommand{\rreg}[1]{\underline{#1}}   % Regular representation
 \newcommand{\ynt}[1]{\tilde{#1}}        % Nat transf in Yoneda lemma
 \newcommand{\yel}[1]{\hat{#1}}          % Element in Yoneda lemma
@@ -91,11 +90,11 @@
 
 \newcommand{\epsln}{\varepsilon}        % \epsilon is not used anywhere
 
-\newcommand{\nat}{\mathbb{N}}           % Natural numbers
-\newcommand{\integers}{\mathbb{Z}}
-\newcommand{\rationals}{\mathbb{Q}}
-\newcommand{\reals}{\mathbb{R}}
-\newcommand{\complexes}{\mathbb{C}}
+\newcommand{\nat}{{\mathbb{N}}}           % Natural numbers
+\newcommand{\integers}{{\mathbb Z}}
+\newcommand{\rationals}{{\mathbb{Q}}}
+\newcommand{\reals}{{\mathbb{R}}}
+\newcommand{\complexes}{{\mathbb{C}}}
 
 \DeclareMathOperator{\cset}{\cat{C}}    % Set of closed subsets
 \DeclareMathOperator{\Cl}{Cl}           % Closure
@@ -199,7 +198,6 @@
 \newcommand{\longto}{\longrightarrow}           % Long labelled arrow
 \newcommand{\toiso}{\toby{\textstyle{}_\sim}}   % Isomorphism arrow
 \newcommand{\incl}{\hookrightarrow}             % Inclusion arrow
-\newcommand{\mapsfrom}{\mathrel{\reflectbox{\ensuremath{\mapsto}}}}
 % Left-pointing \mapsto
 \newcommand{\textiff}{\Longleftrightarrow}      % Iff arrow for use in text
 \newcommand{\textif}{\Longleftarrow}            % If arrow for use in text
