--- a/1612.09375-ams-ish/rep.tex
+++ b/1612.09375-ams-ish/rep.tex
@@ -1599,10 +1599,10 @@ $G$ and element $x \in G$, there is a unique homomorphism $\phi\from
 U(\integers)$ is a universal element of the forgetful functor $U\from \Grp
 \to \Set$; in other words, condition~\eqref{eq:univ-elt-dual} holds when
 $\cat{A} = \Grp$, $X = U$, $A = \integers$ and $u = 1$.  So $1 \in
-U(\integers)$ gives a representation $\h^\integers \toiso U$ of $U$.
+U(\integers)$ gives a representation $\h^{\integers} \toiso U$ of $U$.
 
 On the other hand, the same is true with $-1$ in place of $1$.  The
-isomorphisms $\h^\integers \toiso U$ coming from $1$ and $-1$ are not
+isomorphisms $\h^{\integers} \toiso U$ coming from $1$ and $-1$ are not
 equal, because Corollary~\ref{cor:rep-univ-dual} provides a \emph{one-to-one}
 correspondence between universal elements and representations.
 \end{example}
@@ -1745,13 +1745,13 @@ forgetful functor $U\from \Grp \to \Set$,%
 %
 \index{group}
 %
-and found two different isomorphisms\linebreak $\h^\integers \toiso U$.%
+and found two different isomorphisms\linebreak $\h^{\integers} \toiso U$.%
 %
 \index{Z@$\integers$ (integers)!group@as group}
 %
 Did we find all of them?
 
-Since $\h^\integers \iso U$, there are as many isomorphisms $\h^\integers
+Since $\h^{\integers} \iso U$, there are as many isomorphisms $\h^\integers
 \toiso U$ as there are isomorphisms $\h^\integers \toiso \h^\integers$.  By
 Corollary~\ref{cor:yoneda-ff} and
 Lemma~\ref{lemma:ff-refl-isos}\bref{lemma:ff-refl-isos:medium}, there are
