--- a/1612.09375-ams-ish/theoremenvts.tex
+++ b/1612.09375-ams-ish/theoremenvts.tex
@@ -19,7 +19,7 @@
 
 % Theorem-like environments with bodies set in italics:
 
-\theoremheaderfont{\scshape}
+\theoremheaderfont{\sc}
 
 \newtheorem{thm}{Theorem}[section]
 \newtheorem{propn}[thm]{Proposition}
