--- a/helpers/fixarxiv-charter.tex
+++ b/helpers/fixarxiv-charter.tex
@@ -15,7 +15,7 @@ bookmarksopenlevel=10
 \usepackage[full]{textcomp}
 \usepackage[osf]{XCharter}% lining figures in math, osf in text
 \usepackage[scaled=1.04,varqu,varl]{inconsolata}% inconsolata typewriter
-\usepackage[libertine,vvarbb,scaled=1.03,smallerops,bigdelims]{newtxmath}
+\usepackage[xcharter,vvarbb,scaled=1.03,smallerops,bigdelims]{newtxmath}
 \usepackage[cal=cm]{mathalpha}
 \linespread{1.05}
 \usepackage[papersize={6.9in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
