--- a/1912.06462/sd16.tex
+++ b/1912.06462/sd16.tex
@@ -24,7 +24,7 @@ bookmarksopenlevel=10
 }
 %\usepackage{amssymb}
 \usepackage[full]{textcomp}
-\usepackage{XCharter}% lining figures in math, osf in text
+\usepackage[osf]{XCharter}% lining figures in math, osf in text
 \usepackage[scaled=1.04,varqu,varl]{inconsolata}% inconsolata typewriter
 \usepackage[xcharter,vvarbb,scaled=1.03,smallerops,bigdelims]{newtxmath}
 \usepackage[cal=cm]{mathalpha}
