--- a/1612.09375-ams-ish/BasicCategoryTheory.tex
+++ b/1612.09375-ams-ish/BasicCategoryTheory.tex
@@ -51,15 +51,15 @@ bookmarksopenlevel=10
   
 \titleformat{\section}[block]
   {\fillast}
-  {\large\sc{\thesection }}
+  {\Large\sc\thesection}
   {1ex minus .1ex}
-  {\large\scshape}
+  {\Large\scshape}
   
 \titleformat{\subsection}[block]
   {\fillast}
-  {{\thesection }}
+  {{\it \thesection }}
   {1ex minus .1ex}
-  {\scshape}
+  {\it}
 
 \titleformat*{\subsubsection}{\scshape}
 
