--- a/0903.0340/rosetta.arxiv.3.tex
+++ b/0903.0340/rosetta.arxiv.3.tex
@@ -5,11 +5,7 @@
 %contains all corrections present in the version to be published
 
 \documentclass[12pt]{article}
-\setlength{\parskip}{1ex plus 0.5ex minus 0.2ex}
-\addtolength{\oddsidemargin}{-50pt}
-\addtolength{\evensidemargin}{-50pt}
-\addtolength{\textwidth}{100pt}
-%\sloppy
+\raggedbottom
 
 \usepackage[colorlinks=true
 ,urlcolor=blue
@@ -26,14 +22,18 @@ bookmarksopenlevel=10
 }
 %\usepackage{amssymb}
 %\usepackage{amsmath,amsthm,amscd,amssymb}
-\usepackage[noBBpl]{mathpazo}
-\usepackage{newpxmath}
-\linespread{1.1}
+\usepackage[full]{textcomp}
+\usepackage[osf]{XCharter}% lining figures in math, osf in text
+\usepackage[scaled=1.04,varqu,varl]{inconsolata}% inconsolata typewriter
+\usepackage[xcharter,vvarbb,scaled=1.03,smallerops,bigdelims]{newtxmath}
+\usepackage[cal=cm]{mathalpha}
+\linespread{1.05}
+\usepackage[papersize={6.9in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
 %\usepackage[letterpaper, margin=1.2in]{geometry}
-\usepackage[papersize={7.5in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
+%\usepackage[papersize={7.5in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
 \tolerance=2000
 \hbadness=2000
-\usepackage[medium]{titlesec}
+\usepackage[small]{titlesec}
 
 \usepackage{amssymb}
 \usepackage{latexsym,url}
@@ -475,7 +475,6 @@ Stone to aid researchers attempting to translate between fields.
 Table \ref{analogy} shows our guess as to what this Rosetta
 Stone might look like.  
 
-\vskip 1em 
 \begin{table}[h]
 \begin{center}
 %{\baselineskip=18pt
