--- a/0903.0340/rosetta.arxiv.3.tex
+++ b/0903.0340/rosetta.arxiv.3.tex
@@ -165,10 +165,10 @@ bookmarksopenlevel=10
       \pscustom[fillstyle=gradient,
     gradbegin=white, gradend=gray,gradmidpoint=0,gradangle=70]{
         \psbezier(1.5,2.5)(1.5,1.1)(.4,1.6)(.5,0)
-        \psbezier(.5,0)(.4,-.25)(-.4,-.25)(-.5,0)
-        \psbezier(-0.5,0)(-.4,1.6)(-1.5,1.1)(-1.5,2.5)
+        \psbezier[liftpen=1](.5,0)(.4,-.25)(-.4,-.25)(-.5,0)
+        \psbezier[liftpen=1](-0.5,0)(-.4,1.6)(-1.5,1.1)(-1.5,2.5)
         \psline(-.5,2.5)
-        \psbezier(-.5,2.5)(-.6,1.5)(0.6,1.5)(.5,2.5)
+        \psbezier[liftpen=1](-.5,2.5)(-.6,1.5)(0.6,1.5)(.5,2.5)
         \psline(1.5,2.5)
     }
  %% TOP ELLIPSES
@@ -189,10 +189,10 @@ bookmarksopenlevel=10
     gradbegin=white, gradend=gray,gradmidpoint=0,gradangle=110]{
         \psbezier(1.5,0)(1.5,1.4)(.4,.9)(.5,2.5)
         \psline(-0.5,2.5)
-        \psbezier(-0.5,2.5)(-.4,.9)(-1.5,1.4)(-1.5,0)
-        \psbezier(-1.5,0)(-1.4,-.25)(-.6,-.25)(-.5,0)
-        \psbezier(-.5,0)(-.6,1)(0.6,1)(.5,0)
-        \psbezier(.5,0)(.6,-.25)(1.4,-.25)(1.5,0)
+        \psbezier[liftpen=1](-0.5,2.5)(-.4,.9)(-1.5,1.4)(-1.5,0)
+        \psbezier[liftpen=1](-1.5,0)(-1.4,-.25)(-.6,-.25)(-.5,0)
+        \psbezier[liftpen=1](-.5,0)(-.6,1)(0.6,1)(.5,0)
+        \psbezier[liftpen=1](.5,0)(.6,-.25)(1.4,-.25)(1.5,0)
     }
 %% TOP ELLIPSE
   \psellipse[fillcolor=lightgray,fillstyle=gradient,
@@ -212,7 +212,7 @@ bookmarksopenlevel=10
  \psline(.5,0)(.5,2.5)
  \psline(-.5,2.5)
  \psline(-.5,0)
- \psbezier(-.5,0)(-.4,-.25)(.4,-.25)(.5,0)
+ \psbezier[liftpen=1](-.5,0)(-.4,-.25)(.4,-.25)(.5,0)
  }
 \psellipse[fillcolor=lightgray,fillstyle=gradient,
         gradbegin=lightgray, gradend=gray,gradmidpoint=1,gradangle=110](0,2.5)(.5,.2)
@@ -227,7 +227,7 @@ bookmarksopenlevel=10
      \pscustom[fillcolor=lightgray,fillstyle=gradient,
         gradbegin=white, gradend=gray,gradmidpoint=0,gradangle=88]{
         \psline(-.5,2)(-.5,0)
-        \psbezier(-.5,0)(-.4,-.25)(.4,-.25)(.5,0)
+        \psbezier[liftpen=1](-.5,0)(-.4,-.25)(.4,-.25)(.5,0)
         \psline(.5,2)
         \psline(-.5,2)
     }
@@ -244,7 +244,7 @@ bookmarksopenlevel=10
      \pscustom[fillcolor=lightgray,fillstyle=gradient,
         gradbegin=white, gradend=gray,gradmidpoint=0,gradangle=88]{
         \psline(-.5,1)(-.5,0)
-        \psbezier(-.5,0)(-.4,-.25)(.4,-.25)(.5,0)
+        \psbezier[liftpen=1](-.5,0)(-.4,-.25)(.4,-.25)(.5,0)
         \psline(.5,1)
         \psline(-.5,1)
     }
@@ -260,21 +260,20 @@ bookmarksopenlevel=10
 \newcommand{\birthc}{
  \pscustom[fillstyle=gradient,
     gradbegin=white, gradend=gray,gradmidpoint=0,gradangle=110]{
-        \psbezier(-.5,0)(-.5,.9)(0.5,.9)(.5,0)
-        \psbezier(.5,0)(.4,-.25)(-.4,-.25)(-.5,0)
+        \psbezier[liftpen=1](-.5,0)(-.5,.9)(0.5,.9)(.5,0)(.4,-.25)(-.4,-.25)(-.5,0)
     }
  %%%%
  \begin{psclip}{
  \pspolygon[linestyle=none](.5,0)(.5,.3)(-.5,.3)(-.5,0)(.5,0)
  }
- \psellipse[linestyle=dotted](0,0)(.5,0.2)
+ \psellipse[linestyle=dotted](-.2,0)(.5,0.2)
  \end{psclip}
  }
 
 \newcommand{\deathc}{
  \pscustom[fillstyle=gradient,
     gradbegin=white, gradend=gray,gradmidpoint=0,gradangle=70]{
-        \psbezier(-.5,1)(-.5,.1)(0.5,.1)(.5,1)
+        \psbezier[liftpen=1](-.5,1)(-.5,.1)(0.5,.1)(.5,1)
         \psline(-.5,1)
  }
   \psellipse[fillcolor=lightgray,fillstyle=gradient,
@@ -287,7 +286,7 @@ bookmarksopenlevel=10
  \psline(.5,0)(-1.5,2.5)
  \psline(-.5,2.5)
  \psline(1.5,0)
- \psbezier(1.5,0)(1.4,-.25)(.6,-.25)(.5,0)
+ \psbezier[liftpen=1](1.5,0)(1.4,-.25)(.6,-.25)(.5,0)
  }
   \pscustom[fillcolor=lightgray,fillstyle=gradient,
         gradbegin=white, gradend=gray,gradmidpoint=0,gradangle=70]{
@@ -316,25 +315,25 @@ bookmarksopenlevel=10
    \pscustom[fillstyle=gradient,
     gradbegin=white, gradend=gray,gradmidpoint=0,gradangle=110]{
         \psbezier(1.5,0)(1.6,2)(-1.6,2)(-1.5,0)
-        \psbezier(-1.5,0)(-1.4,-.25)(-.6,-.25)(-.5,0)
-        \psbezier(-.5,0)(-.6,.8)(0.6,.8)(.5,0)
-        \psbezier(.5,0)(.6,-.25)(1.4,-.25)(1.5,0)
+        \psbezier[liftpen=1](-1.5,0)(-1.4,-.25)(-.6,-.25)(-.5,0)
+        \psbezier[liftpen=1](-.5,0)(-.6,.8)(0.6,.8)(.5,0)
+        \psbezier[liftpen=1](.5,0)(.6,-.25)(1.4,-.25)(1.5,0)
     }
  %%%%
   \begin{psclip}{
  \pspolygon[linestyle=none](1.5,0)(1.5,.3)(-1.5,.3)(-1.5,0)(1.5,0)
  }
- \psellipse[linestyle=dotted](1,0)(.5,0.2)
- \psellipse[linestyle=dotted](-1,0)(.5,0.2)
+ \psellipse[linestyle=dotted](.8,0)(.4,0.2)
+ \psellipse[linestyle=dotted](-1.1,0)(.4,0.2)
  \end{psclip}
  }
 
 \newcommand{\zigc}{
        \pscustom[fillstyle=gradient,
     gradbegin=white, gradend=gray,gradmidpoint=0,gradangle=70]{
-        \psbezier(1.5,2)(1.6,0)(-1.6,0)(-1.5,2)
+        \psbezier[liftpen=1](1.5,2)(1.6,0)(-1.6,0)(-1.5,2)
         \psline(-.5,2)
-        \psbezier(-.5,2)(-.6,1.2)(0.6,1.2)(.5,2)
+        \psbezier[liftpen=1](-.5,2)(-.6,1.2)(0.6,1.2)(.5,2)
         \psline(1.5,2)
     }
  %%%%
@@ -793,7 +792,7 @@ $f \maps X \to Y$ is an $n$-dimensional manifold whose boundary is
 the disjoint union of the $(n-1)$-dimensional manifolds $X$ and $Y$.  
 Here are a couple of cobordisms in the case $n = 2$:
 \[
-\begin{pspicture}[shift=-1.5](4,4)
+\begin{pspicture}[showgrid=true,shift=-1.5](4,4)
   \rput(3,1){\birthc}
   \rput(1,1){\medidentc}
 \end{pspicture}
@@ -816,7 +815,7 @@ the other.   So, in the above example $gf \maps X \to Z$ looks like this:
 \begin{pspicture}[shift=-1.5](4,4)
   \rput(2,0){\multc}
   \rput(1,2.49){\smallidentc}
-  \rput(3,2.49){\birthc}
+  \rput(3.1,2.49){\birthc}
 \end{pspicture}
 \qquad
  \xy
