--- a/0903.0340/rosetta.arxiv.3.tex
+++ b/0903.0340/rosetta.arxiv.3.tex
@@ -7,7 +7,7 @@
 \documentclass[12pt]{article}
 \raggedbottom
 
-\usepackage[colorlinks=true
+\usepackage[dvips,colorlinks=true
 ,urlcolor=blue
 ,anchorcolor=blue
 ,citecolor=blue
