--- a/0903.0340/rosetta.arxiv.3.tex
+++ b/0903.0340/rosetta.arxiv.3.tex
@@ -792,7 +792,7 @@ $f \maps X \to Y$ is an $n$-dimensional manifold whose boundary is
 the disjoint union of the $(n-1)$-dimensional manifolds $X$ and $Y$.  
 Here are a couple of cobordisms in the case $n = 2$:
 \[
-\begin{pspicture}[showgrid=true,shift=-1.5](4,4)
+\begin{pspicture}[shift=-1.5](4,4)
   \rput(3,1){\birthc}
   \rput(1,1){\medidentc}
 \end{pspicture}
