--- a/0903.0340/rosetta.arxiv.3.tex
+++ b/0903.0340/rosetta.arxiv.3.tex
@@ -4750,6 +4750,7 @@ category.  Table \ref{analogy_detailed}, an expanded version of the
 Rosetta Stone, shows some of the analogies we found.
 
 \begin{table}[h]
+\scriptsize
 \begin{center}
 \begin{tabular}{|c|c|c|c|c|}
 \hline
