--- a/helpers/fixarxiv-charter.tex
+++ b/helpers/fixarxiv-charter.tex
@@ -27,4 +27,4 @@ bookmarksopenlevel=10
 \titlelabel{{\thetitle}.\quad}
 
 \input{../helpers/fix-underbrace.tex}
-\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/psu-sc-headers.tex}
