--- a/1408.0054/cohesion-rev.tex
+++ b/1408.0054/cohesion-rev.tex
@@ -2,7 +2,7 @@
 \providecommand{\event}{QPL 2012}
 \usepackage{amssymb,amsmath,stmaryrd,mathrsfs}
 
-\hypersetup{colorlinks=true
+\hypersetup{colorlinks=true,breaklinks=true
 ,urlcolor=blue
 ,anchorcolor=blue
 ,citecolor=blue
