--- a/1612.09375-ams-ish/BasicCategoryTheory-Charter.tex
+++ b/1612.09375-ams-ish/BasicCategoryTheory-Charter.tex
@@ -53,9 +53,9 @@ bookmarksopenlevel=10
   
 \titleformat{\section}[block]
   {\fillast}
-  {\Large\sc{\thesection }}
+  {\large\bfseries{\thesection }}
   {1ex minus .1ex}
-  {\Large\scshape}
+  {\large\bfseries}
   
 \titleformat{\subsection}[block]
   {\fillast}
