--- a/1612.09375-ams-ish/BasicCategoryTheory.tex
+++ b/1612.09375-ams-ish/BasicCategoryTheory.tex
@@ -48,12 +48,13 @@ bookmarksopenlevel=10
 \makeatletter
 \AJW@headwidth \textwidth
 \addtolength{\AJW@headwidth}{-\AJW@indent}
-  
+
+
 \titleformat{\section}[block]
   {\fillast}
-  {\Large\sc\thesection}
+  {\large\bfseries{\thesection }}
   {1ex minus .1ex}
-  {\Large\scshape}
+  {\large\bfseries}
   
 \titleformat{\subsection}[block]
   {\fillast}
