--- a/1612.09375-ams-ish/cambridge7A.cls
+++ b/1612.09375-ams-ish/cambridge7A.cls
@@ -696,7 +696,7 @@
          \ifAJW@confsty% remove chapter number from [conferencestyle] option
            {\huge\bfseries \vphantom{\thechapter}}
          \else
-           {\huge\bfseries \thechapter}
+           {\huge \thechapter}
         \fi
        \fi
      \fi
