--- a/quant-ph-0404040/quantum.tex
+++ b/quant-ph-0404040/quantum.tex
@@ -1646,8 +1646,10 @@ both in October 2000.
 
 \begin{thebibliography}{99}
 
+\raggedright
+
 \bibitem{AC} S.\ Abramsky and B.\ Coecke, A categorical semantics of
-quantum protocols, available at \hfill
+quantum protocols, available at 
 \texttt{http://www.arXiv.org/abs/quant-ph/0402130}.
 
 \bibitem{Atiyah} M.\ F.\ Atiyah, Topological quantum field theories,
