--- a/1912.09906/cohmacros.sty
+++ b/1912.09906/cohmacros.sty
@@ -55,8 +55,6 @@
 \def\tensor{\otimes}    % tensor product
 \def\sint{\mbox{\small $\int$}}
 
-\def\iff{~~~\Leftrightarrow~~~}
-\def\implies{~~~\Rightarrow~~~}
 \def\downto{\downarrow}
 \def\upto{\uparrow}
 \def\shalf{\mbox{\small$\frac{1}{2}$\normalsize}}
@@ -133,7 +131,7 @@
 \def\Linx{{{\fct{Lin}}^\times\,}}
 \def\Lin{{\fct{Lin}\,}}
 \def\map{\fct{Map}}
-\def\mod{\fct{mod}}
+%\def\mod{\fct{mod}}
 \def\norm{\fns{norm}}
 \def\out{{{\fns{out}}}}
 \def\PFD{partial fraction decomposition }
@@ -152,11 +150,4 @@
 \def\tot{\fns{tot}}
 \def\tr{{\fct{tr}\,}}
 \def\Tr{{\fct{Tr}\,}}
-
-
-
-
-\parindent=0pt
-\openup 2pt
-\parskip 2ex plus 1pt minus 1pt
 
