--- a/math-0105155/oct.tex
+++ b/math-0105155/oct.tex
@@ -1,3 +1,23 @@
+\documentclass[12pt]{article} 
+\usepackage {amsfonts}
+%\usepackage{amssymb}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[noBBpl,sc]{mathpazo}
+\linespread{1.1}
 
         %prepared in LaTeX   
    
@@ -68,8 +88,8 @@
 	\newcommand{\Inv}{{\rm Inv}}   
 	\newcommand{\tensor}{\otimes}   
         \newcommand{\iso}{\cong}   
-        \newcommand{\implies}{\Longrightarrow}   
-        \newcommand{\impliedby}{\Longleftarrow}   
+        %\newcommand{\implies}{\Longrightarrow}   
+        %\newcommand{\impliedby}{\Longleftarrow}   
    
 	\newcommand{\be}{\begin{equation}}   
         \newcommand{\ee}{\end{equation}}   
@@ -97,17 +117,25 @@
 	\newtheorem{corollary}{Corollary}   
 	\newtheorem{ex}{Example}   
  
-\documentclass {article} 
-\usepackage {amsfonts}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\tolerance=2000
+\hbadness=2000
+%\usepackage[small]{titlesec}
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
 
-	\textwidth 6in   
-	\textheight 8.5in	\evensidemargin .25in   
-	\oddsidemargin .25in   
-	\topmargin .25in   
-	\headsep 0in   
-	\headheight 0in   
-	\footskip .5in   
-%If you want single spaced copy, delete the next two lines.   
+\usepackage[small]{titlesec}
+\usepackage{titletoc}
+
+
+\input{../helpers/mnsymbol.tex}
+
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/revtex-12-fix.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+	%If you want single spaced copy, delete the next two lines.   
 %	\parskip 1.75\parskip plus 3pt minus 1pt   
 %	\renewcommand{\baselinestretch}{1.5}   
 	\pagestyle{plain}   
