--- a/helpers/psu-sc-titles.tex
+++ b/helpers/psu-sc-titles.tex
@@ -1,8 +1,8 @@
 \titleformat{\section}[block]
   {\fillast}
-  {{\large\thesection. }}
+  {{\large\bf\thesection. }}
   {1ex minus .1ex}
-  {\large\scshape\MakeLowercase}
+  {\large\bf\MakeLowercase}
  
 \titleformat*{\subsection}{\itshape}
 \titleformat*{\subsubsection}{\itshape}
