--- a/rothman-1982-updated/rothman.tex
+++ b/rothman-1982-updated/rothman.tex
@@ -89,7 +89,7 @@ At this particular time, there were undeniable problems. During Galois's first t
 
 Nevertheless, Galois's first two years at Louis-le-Grand were marked by a number of successes. He received the first prize for Latin verse and three honorable mentions, as well as a mention in Greek for the General Concourse. At this point we witness the first of Bell's distortions of chronology to give the impression that Galois was misunderstood and persecuted. Galois was asked to repeat his third year because of his poor work in rhetoric Bell writes, ``His mathematical genius was already stirring,'' and ``He was forced to lick up the stale leavings which his genius had rejected [17].'' I cannot say with any certainty whether Galois's mathematical genius was already stirring, but it is known that Evariste did not enroll in his first mathematics course until after he had been demoted.
 
-During his mathematics course, which he began in February 1827, Galois discovered Legendre's text on geometry, soon followed by Lagrange's original memoirs: \emph{Resolution of Numerical Equations\symbolfootnote[1]{Here and elsewhere, read ``algebraic equations'' for ``numerical equations.''}: Theory of Analytic Functions and Lessons on the Calculus of Functions.} Doubtlessly, Galois received his initial ideas on the theory of equations from Lagrange. I do not understand what Bell claims Galois's classwork was mediocre; his instructor M. Vernier constantly writes such accolades as ``zeal and success,'' ``zeal and progress very marked [18].''
+During his mathematics course, which he began in February 1827, Galois discovered Legendre's text on geometry, soon followed by Lagrange's original memoirs: \emph{Resolution of Numerical Equations\symbolfootnote[1]{Here and elsewhere, read ``algebraic equations'' for ``numerical equations.''}: Theory of Analytic Functions and Lessons on the Calculus of Functions.} Doubtlessly, Galois received his initial ideas on the theory of equations from Lagrange. I do not understand why Bell claims Galois's classwork was mediocre; his instructor M. Vernier constantly writes such accolades as ``zeal and success,'' ``zeal and progress very marked [18].''
 
 With his discovery of mathematics, Galois became absorbed and neglected his other courses. Before rolling in M. Vernier's class, typical comments about him had been:
 
@@ -127,7 +127,7 @@ A truly tragic blow came within a month of the submission: on the second of July
 
 But Galois's troubles were not yet over. A few days later, he failed his examination to l'Ecole Polytechnique for the second and final time. Legend has it that Galois, who worked almost entirely in his head and who was poor at presenting his ideas verbally, became so enraged at the stupidity of his examiner that he hurled an eraser at him. Bell records this as a fact [25] but according to the little-known study of Joseph Bertrand [26] the tradition is false. Bertrand, who appears to have detailed information about the event, records that Galois, while expounding on the properties of logarithmic series, refused to prove his statements to the examiner M. Dinet and, in response to Dinet's questions, replied merely that the answer was completely obvious. So was the result.
 
-The examination failures, as well as the misunderstanding of his humanities teachers, left Galois irrevocably embittered. Bell quotes him as writing, 11Genius is condemned by a malicious social organization to an eternal denial of justice in favor of fawning mediocrity [27].'' I believe Bell constructed this quotation from a passage of Dupuy's [28] but Galois did express similar sentiments in his fragmentary essay ``Sciences, Hierarchie: Ecoles'' and in ``Sur l'Enseignment des Sciences'' (``Hierarchy is a means for the inferior [29].''). In Bell's diatribe against this famous examination, as well as in other accounts of it, the suggestion that the death of Galois's father several days before may have had something to do with the outcome never arises. It is a simple matter for Bell to lay the fault squarely with the examiner's stupidity because Bell has placed the examination before M. Galois's unfortunate suicide. In this instance, Bell is not fully to blame; Dupuy does not date the examination [30]. I do not wish to suggest Galois should have been failed. I only wish to point out that the examination must have been held under the worst possible conditions.
+The examination failures, as well as the misunderstanding of his humanities teachers, left Galois irrevocably embittered. Bell quotes him as writing, ``Genius is condemned by a malicious social organization to an eternal denial of justice in favor of fawning mediocrity [27].'' I believe Bell constructed this quotation from a passage of Dupuy's [28] but Galois did express similar sentiments in his fragmentary essay ``Sciences, Hierarchie: Ecoles'' and in ``Sur l'Enseignment des Sciences'' (``Hierarchy is a means for the inferior [29].''). In Bell's diatribe against this famous examination, as well as in other accounts of it, the suggestion that the death of Galois's father several days before may have had something to do with the outcome never arises. It is a simple matter for Bell to lay the fault squarely with the examiner's stupidity because Bell has placed the examination before M. Galois's unfortunate suicide. In this instance, Bell is not fully to blame; Dupuy does not date the examination [30]. I do not wish to suggest Galois should have been failed. I only wish to point out that the examination must have been held under the worst possible conditions.
 
 Thus, Galois's secondary school career ended in a string of minor setbacks and two major disasters. Evariste had not planned to take the Baccalaureate examinations, because the Ecole Polytechnique did not require them. Now, having failed the Polytechnique's entrance examination and having decided to enter the less prestigious Ecole Normale\symbolfootnote[1]{Then called the l'Ecole Preparatoire. The faculty of the Polytechnique before 1830 included, among others, Lagrange, Laplace, Fourier, Ampere, Cauchy, Coriolis, Poisson and Gay-Lussac. It is not surprising that young scientists wished to enroll.}, he was forced to reconsider. ``Still persecuted and maliciously misunderstood by his preceptors,'' in Bell's words, ``Galois prepared himself for the final examinations [31].'' Despite such malice, Galois did very well in mathematics and physics, though less well in literature. He received both a Bachelor of Letters and a Bachelor of Science on the twenty-ninth of December, 1829.
 
@@ -137,7 +137,7 @@ Because I do not have an accurate date for this report, I cannot propose a speci
 
 \section{L'Ecole Normale}
 
-The early months of 1830, which saw Galois officially enrolled as a student at l'Ecole Normale, also witnessed an interesting series of transactions with the Academy. Recall that Galois had submitted his first researches to the Academy on May 25 and June 1 of 1929. On January 18, 1830, Cauchy wrote the previously mentioned letter discovered by Taton [32]:
+The early months of 1830, which saw Galois officially enrolled as a student at l'Ecole Normale, also witnessed an interesting series of transactions with the Academy. Recall that Galois had submitted his first researches to the Academy on May 25 and June 1 of 1829. On January 18, 1830, Cauchy wrote the previously mentioned letter discovered by Taton [32]:
 
 \begin{quote}
 I was supposed to present today to the Academy first a report on the work of the young Galois, and second a memoir on the analytic determination of primitive roots in which I show how one can reduce this determination to the solution of numerical equations of which all roots are positive integers. Am indisposed at home. I regret not being able to attend today's session, and I would like you to schedule me for the following session for the two indicated subjects. Please accept my homage...  \hfill A.-L. Cauchy
@@ -152,7 +152,7 @@ The misfortune referred to above was the death of Fourier on May 16, 1830. Galoi
 
 In addition to propagating the legend that Cauchy lost the manuscripts, Bell, curiously, does not mention Fourier by name in the preceding misadventure, although Dupuy is explicit on the identity of the Academy's Perpetual Secretary. Perhaps Bell felt it a little too much to ``expose'' Cauchy, Fourier and later Poisson as incompetents. Bell also does not make it clear that the papers listed above (plus a later memoir) constitute what is now called Galois theory. If this point had been clarified, the claim that Galois had written down the theory on the eve of the duel would be difficult to substantiate or even to suggest.
 
-From this point onward, the scenario of Galois a passive victim to negligence, misunderstanding and bad luck begins to break down--if it has not already. More and more he participated in the creation of his own disasters. But this picture does not fit Bell's plan. Therefore chronology is rearranged, events are omitted and others invented in increasing quantity, until the end of his account is largely fantasy. The wholesale reordering of events will be especially evident in what follows.
+From this point onward, the scenario of Galois as a passive victim to negligence, misunderstanding and bad luck begins to break down---if it has not already. More and more he participated in the creation of his own disasters. But this picture does not fit Bell's plan. Therefore chronology is rearranged, events are omitted and others invented in increasing quantity, until the end of his account is largely fantasy. The wholesale reordering of events will be especially evident in what follows.
 
 Most important, Bell gives an extremely late start to Galois's political activities. He remarks that had Evariste's teachers at Louis-le-Grand allowed him to study only mathematics, he might have lived to be eighty [38]. Unlikely. According to Dupuy, one of the reasons Galois had hoped to attend the Polytechnique was to participate in political activities. At l'Ecole Normale he became a ``polytechnician in exile.'' The July revolution of 1830 reared its head. The Director of l'Ecole Normale, M. Guigniault, locked the students in so that they would not be able to fight on the streets. Galois was so incensed at the decision that he tried to escape by scaling the walls. He failed, and in doing so missed the revolution. Afterwards, the Director put the students in the service of the provisional government. Charles X had fled France. He would be followed in September by Cauchy. Louis-Philippe was the new King.
 
@@ -175,7 +175,7 @@ Here is the man who the next day covered his hat with an immense tricolor cockad
 \end{quotation}
 Galois continues. According to Dupuy, every statement in the letter is accurate. Nevertheless, the result is what might have been anticipated: Galois was expelled. The action was to become official on January 4, but Galois quit school immediately and joined the Artillery of the National Guard, a branch of the militia which was almost entirely composed of republicans. It is interesting to note that the forty-six students referred to in the letter actually published a reply against Galois, but this seems to have been at the ``prompting'' of M. Guigniault [41].
 
-December was a turbulent month for other reasons. After the Bourbons had fled France, four of their ex-ministers were to be tried for treason. Popular sentiment called for their execution. The decision to execute or imprison for life was to be announced on December 21. That day, the Artillery of the National Guard was stationed in the quadrangle at the Louvre. Galois was certainly there. The atmosphere was very tense. If the ministers were given a life sentence, the artillerymen had planned to revolt. But the Louvre was soon surrounded by the full National Guard and troops of the line, more trustworthy arms of the military. A distant cannon shot was heard. It signaled the end of the trial and that the ministers had indeed been given imprisonment over execution. The artillerymen and the National Guard readied themselves for bloodshed, but with the arrival at the Louvre of thousands of Parisians, the fighting did not erupt. Over the next few days, the situation in paris grew calmer with the appearance of Lafayette, who called for peace, and daily proclamations calling for order. On December 31, 1830, the Artillery of the National Guard was abolished by a royal decree in fear of its threat to the throne [42].
+December was a turbulent month for other reasons. After the Bourbons had fled France, four of their ex-ministers were to be tried for treason. Popular sentiment called for their execution. The decision to execute or imprison for life was to be announced on December 21. That day, the Artillery of the National Guard was stationed in the quadrangle at the Louvre. Galois was certainly there. The atmosphere was very tense. If the ministers were given a life sentence, the artillerymen had planned to revolt. But the Louvre was soon surrounded by the full National Guard and troops of the line, more trustworthy arms of the military. A distant cannon shot was heard. It signaled the end of the trial and that the ministers had indeed been given imprisonment over execution. The artillerymen and the National Guard readied themselves for bloodshed, but with the arrival at the Louvre of thousands of Parisians, the fighting did not erupt. Over the next few days, the situation in Paris grew calmer with the appearance of Lafayette, who called for peace, and daily proclamations calling for order. On December 31, 1830, the Artillery of the National Guard was abolished by a royal decree in fear of its threat to the throne [42].
 
 In January 1831 Galois, no longer a student, attempted to organize a private class in algebra. At the first meeting, about forty students appeared [43] but the endeavor did not last long, evidently because of Galois's political activities. On the 17h of that month, upon the invitation of Poisson, Galois submitted a third version of his memoir to the Academy. Later, in July, Poisson would reject the manuscript. This rejection will be discussed at the proper time, but we should note that by that time Galois would have already been arrested.
 
