--- a/rothman-1982-updated/rothman.tex
+++ b/rothman-1982-updated/rothman.tex
@@ -26,9 +26,9 @@ bookmarksopenlevel=10
 \usepackage[small]{titlesec}
 \titleformat{\section}[block]
   {\fillast\medskip}
-  {{\large\sc\thesection. }}
+  {{\sc\thesection. }}
   {1ex minus .1ex}
-  {\large\scshape}
+  {\scshape}
  
 \titleformat*{\subsection}{\itshape}
 \titleformat*{\subsubsection}{\itshape}
@@ -585,7 +585,11 @@ Sciences} 24, 123 (1971).
 
 36. See, for example, Lilian Lieber, \emph{Galois and the Theory of Groups} (1932).
 
-37. Bourgne and Azra, p. XXVIII. 38. Bell, p. 366. 39. Dupuy, p. 221, and Bourgne and Azra, p. XXIX.
+37. Bourgne and Azra, p. XXVIII. 
+
+38. Bell, p. 366. 
+
+39. Dupuy, p. 221, and Bourgne and Azra, p. XXIX.
 
 40. Bourgne and Azra, p. 462. Also Dupuy, p. 225. Translated in part by Infeld, p. 155. 
 
