--- a/rothman-1982-updated/rothman.tex
+++ b/rothman-1982-updated/rothman.tex
@@ -625,7 +625,9 @@ consistent account, also based on Blanc, is given by Infeld, Chap. 5.
 55. Because of a change of libraries, this account of the trial is based on a different edition of Dumas's memiors
 : Alexandre Dumas, {\it Mes Memoirs} (Paris: Union Generale d'Editions), vol. 2, chap. 37. (No copyright date given.) 
 
-56. Infeld, p. 230. 57. See, for example, T.E.B. Howarth, \emph{Citizen King: The Life of Louis-Philippe} (London: Eyre \&
+56. Infeld, p. 230. 
+
+57. See, for example, T.E.B. Howarth, \emph{Citizen King: The Life of Louis-Philippe} (London: Eyre \&
 Spottiswoode, 1961). 
 
 58. Dupuy, p. 238. 
